--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Tabatch",
-  "name": "Tabatch",
+  "name": "Tabatch by TADR",
   "icons": [
       {
         "src": "img/logo_96.png",
