--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,7 @@
       }
     ],
   "start_url": "https://nikonosfive.github.io/Tabatch/index.html",
-  "display": "minimal-ui",
+  "display": "standalone",
   "lang": "ja-JP",
   "theme_color": "#000000",
   "background_color": "#000000",
